# python-package-template

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
docs/: index.md
package-name/: __init__.py
package-name/tests/: test_something.py
python_package_name/: __init__.py
