[tool.poetry]
name = "python_package_name"
version = "1.0.1"
description = "description"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "..."
repository = "..."
keywords = ["python"]
classifiers = [
    "Development Status :: 1 - Planning",
]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1"
pytest = "^7.0.0"
mypy = "^0.940"
flake8 = "^4.0.1"

[tool.poetry.scripts]
# "hook" = "python_package_name.scripts.module:main"

[tool.vulture]
paths = ["python_package_name"]
min_confidence = 80
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
